--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Learning Bootstrap v5 with sass</title>
+    <title>Lamont Void Portfolio</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/fontawesome.css">
     <link rel="stylesheet" href="assets/vendors/css/glightbox.min.css">
@@ -114,7 +114,7 @@
        <div class="icon d-block fas fa-shield-virus"></div>
        <h3 class="display-3--title mt-1">Current Role: Cyber Analyst</h3>
        <p class="lh-lg">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui aliquam consectetur ullam ex eligendi deleniti, iure quas iste, amet eaque esse? Rem ut nobis id dolores laboriosam provident, voluptates corrupti?
+        I'm a cyber analyst, looking for bad guys and helping make the internet a safer place
        </p>
        <button type="button" class="rounded-pill btn-rounded border-primary">Check out my LinkedIn!
         <span><i class="fas fa-arrow-right"></i></span>
@@ -139,8 +139,8 @@
        <div class="icon d-block fas fa-code"></div>
        <h3 class="display-3--title mt-1">web development</h3>
        <p class="lh-lg">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui aliquam consectetur ullam ex eligendi deleniti, iure quas iste, amet eaque esse? Rem ut nobis id dolores laboriosam provident, voluptates corrupti?
-       </p>
+        I have a genuine passion for creating stunning web sites. 
+        </p>
        <button type="button" class="rounded-pill btn-rounded border-primary">My Projects!
         <span><i class="fas fa-arrow-right"></i></span>
       </button>
@@ -154,7 +154,7 @@
        <div class="icon d-block fas fa-skull-crossbones"></div>
        <h3 class="display-3--title mt-1">Pentesting</h3>
        <p class="lh-lg">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui aliquam consectetur ullam ex eligendi deleniti, iure quas iste, amet eaque esse? Rem ut nobis id dolores laboriosam provident, voluptates corrupti?
+        I don't wear the typical hoodie, but I do like to frequent Hack The Box.
        </p>
        <button type="button" class="rounded-pill btn-rounded border-primary">Get in Touch!
         <span><i class="fas fa-arrow-right"></i></span>
@@ -176,7 +176,7 @@
       <h1 class="display-3 fw-bold text-capitalize">Latest work</h1>
       <div class="heading-line"></div>
       <p class="lead">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint porro temporibus distinctio.
+        I'm constantly looking for ways to learn and gain experience in creating web sites, cyber security, and development.
       </p>
     </div>
     <!-- FILTER BUTTONS  -->
