--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <!---//Navbar Section///-->
     <nav class="navbar navbar-expand-lg navbar-dark menu shadow-lg fixed-top">
         <div class="container">
-          <a class="navbar-brand" href="#">
-            <image src="images/logo.PNG"alt="logo image"></image>
+          <a class="navbar-brand" href="Lamont V.">
+            <image src="images/logo.png"alt="logo image"></image>
         </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
