--- a/index.html
+++ b/index.html
@@ -242,8 +242,8 @@
             connect on social media
         </div>
         <div class="col-lg-7 col-md-6">
-          <a href=""><i class="fab fa-linkedin"></i></a>
-          <a href=""><i class="fab fa-github"></i></a>
+          <a href="https://www.linkedin.com/in/lamont-void-cissp-abb261160"><i class="fab fa-linkedin"></i></a>
+          <a href="https://github.com/LamontV/"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </div>
