--- a/index.html
+++ b/index.html
@@ -46,17 +46,18 @@
        <div class="container">
          <div class="row align-items-center text-white">
            <!--Start the content for intro-->
-          <div class="col-md-6 intros text-start">
-          <h1 class="display-2">
-            <span class="display-2--intro">Hey!, I'm Lamont</span>
-            <span class="display-2--description lh-base">this is a snapshot of some of my projects.  In my day job I'm a Cyber Analyst, but also like to build web pages and hack!
-              Please have a look and leave a comment
-            </span>
-          </h1>
-          <button type="button" class="rounded-pill btn-rounded">Get in Touch!
-            <span><i class="fas fa-arrow-right"></i></span>
-          </button>
+          <div class="text">
+              <p>Nachos are</p>
+              <p>
+                <span class="word wisteria">tasty.</span>
+                <span class="word belize">wonderful.</span>
+                <span class="word pomegranate">fancy.</span>
+                <span class="word green">beautiful.</span>
+                <span class="word midnight">cheap.</span>
+              </p>
+            </div>
           </div>
+       </div>
           <!--Start the content for video -->
           <div class="col-md-6 intros text-end">
            <div class="video-box shadow-2xl-">
