--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
          <div class="col-md-6 intros text-start">
           <h1 class="display-2">
             <span class="display-2--intro">Hey!, I'm Lamont</span>
-            <span class="display-2--description lh-base">this is a snapshot of some of my projects.  In my day job I'm a Cyber Analyst, but also like to build web pages and hack!
-              Please have a look and leave a comment
+            <span class="display-2--description lh-base">I'm a freelance web developer with a graphic design background based in the DMV.  I specialize in creating interactive and functional interfaces using React, Canvas, Atomic Architecture, and Design Systems.
             </span>
           </h1>
           <button type="button" class="rounded-pill btn-rounded">Get in Touch!
