--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="col-md-6 border-right">
             <div class="bg-white p-3">
               <h2 class="fw-bold text-capitalize text-center">
-                Our Services Range From Initial Design To Deployment Anywhere Anytime!
+                My Services Range From Initial Design Conception and drafting To Deployment
               </h2>
             </div>
           </div>
