--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <div class="col-md-6 border-right">
             <div class="bg-white p-3">
               <h2 class="fw-bold text-capitalize text-center">
-                My Services Range From Initial Design Conception and drafting To Deployment
+                I have a genuine passion for all things tech! 
               </h2>
             </div>
           </div>
