--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
          <div class="col-md-6 intros text-start">
           <h1 class="display-2">
             <span class="display-2--intro">Hey!, I'm Lamont</span>
-            <span class="display-2--description lh-base">I'm a freelance web developer with a graphic design background based in the DMV.  I specialize in creating interactive and functional interfaces using React, Canvas, Atomic Architecture, and Design Systems.
+            <span class="display-2--description lh-base">I'm a freelance developer/web developer/pentester with a graphic design background based in the DMV.  I specialize in creating interactive and functional interfaces using React, Canvas, Atomic Architecture, and Design Systems.
             </span>
           </h1>
           <button type="button" class="rounded-pill btn-rounded">Get in Touch!
@@ -98,8 +98,7 @@
           <div class="col-md-6">
             <div class="bg-white p-4 text-start">
               <p class="fw-light">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci unde nihil expedita eligendi sunt doloremque ipsum, praesentium consequuntur in reiciendis, reprehenderit ullam consequatur consectetur autem blanditiis eius suscipit?
-              </p>
+                I am always ready to take on a challenge. Challenges push me to work harder and gain knowledge.</p>
             </div>
           </div>
         </div>
@@ -241,7 +240,7 @@
             connect on social media
         </div>
         <div class="col-lg-7 col-md-6">
-          <a href="https://www.linkedin.com/in/lamont-void-cissp-abb261160"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/lamont-void-cissp-abb261160/fr?trk=people-guest_people_search-card"><i class="fab fa-linkedin"></i></a>
           <a href="https://github.com/LamontV/"><i class="fab fa-github"></i></a>
         </div>
       </div>
